[package]
name = "odonata"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = "0.8"
bevy = { version = "0.9", default_features = false, features = ["bevy_asset"] }
bevy_embedded_assets = "0.6"
bevy_kira_audio = "0.13"
bevy_pixels = "0.8"
bvh-arena = "1"
directories = "4"
pix = "0.13"
png = "0.17"

# For the `optimize` feature
log = { version = "0.4", optional = true }
tracing = { version = "0.1", optional = true }

[features]
default = ["optimize"]
# Disable the `optimize` feature to allow all log levels in release builds
optimize = ["log/release_max_level_warn", "tracing/release_max_level_warn"]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
